# pubg_rotation_bot

./: Cargo.toml  LICENSE  run.sh
.github/workflows/: test.yml
examples/: pretty_json.json
src/: main.rs  rotation.rs
