[package]
name = "pubg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.17", features = ["macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
log = "0.4"
pretty_env_logger = "0.5"
reqwest = { version = "0.11" }
scraper = "0.26"
biome_js_parser = "0.4"
biome_js_syntax = "0.4"
biome_rowan = "0.4"
serde_json = "1.0"
chrono = "0.4.44"
